middleware/keycloak/manifests/k8s-keycloak-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-server
  labels:
    app: keycloak-server
    name: keycloak-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-server
  template:
    metadata:
      labels:
        app: keycloak-server
        name: keycloak-server
    spec:
      containers:
      - name: keycloak-server
        image: registry.localtest.me:5001/keycloak/keycloak:22.0.5
        command:
          - "/opt/keycloak/bin/kc.sh"
          - "start"
          - "--https-certificate-file=/run/secrets/tls/tls.crt"
          - "--https-certificate-key-file=/run/secrets/tls/tls.key"
        ports:
          - containerPort: 8080
            name: http
          - containerPort: 8443
            name: https
        volumeMounts:
          - mountPath: /run/secrets/tls
            name: cert
      volumes:
        - name: cert
          secret:
            secretName: keycloak-tls
