middleware/keycloak/manifests/k8s-keycloak-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  labels:
    app: keycloak-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      protocol: TCP
    - port: 8443
      name: https
      protocol: TCP
  selector:
    app: keycloak-server
